--- a/plugstack.conf
+++ b/plugstack.conf
@@ -32,5 +32,5 @@
 # forward its X11 display to batch execution node.
 #
 #-------------------------------------------------------------------------------
-#optional          x11.so
+optional          x11.so
 #-------------------------------------------------------------------------------
